--- a/embuild-analyses/package.json
+++ b/embuild-analyses/package.json
@@ -18,10 +18,10 @@
     "contentlayer": "^0.3.4",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.561.0",
-    "next": "16.0.10",
+    "next": "14.2.13",
     "next-contentlayer": "^0.3.4",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -29,10 +29,10 @@
     "@tailwindcss/typography": "^0.5.19",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.10",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
