chore: ignore large geodata file

--- a/embuild-analyses/.gitignore
+++ b/embuild-analyses/.gitignore
@@ -42,3 +42,8 @@ next-env.d.ts
 
 # contentlayer
 .contentlayer
+
+# Large geodata (ignored due to size)
+# Use Git LFS if you need to track large files instead of committing them directly
+shared-data/geo/LAU_RG_01M_2024_4326.gpkg
+shared-data/geo/*.gpkg
