fix(ci): fix heredoc python indentation

--- a/.github/workflows/update-vergunningen-data.yml
+++ b/.github/workflows/update-vergunningen-data.yml
@@ -47,21 +47,21 @@ jobs:
           REMOTE_ETAG=$(printf '%s\\n' "$headers" | awk -F': ' '/^ETag:/ {print $2}' | tr -d '\\r"') || true
           REMOTE_LASTMOD=$(printf '%s\\n' "$headers" | awk -F': ' '/^Last-Modified:/ {print substr($0,index($0,$2)) }' | tr -d '\\r') || true
 
-            python - <<PY
-            import os,json,sys
-            meta=os.environ.get('META_FILE')
-            etag=os.environ.get('REMOTE_ETAG') or ''
-            lm=os.environ.get('REMOTE_LASTMOD') or ''
-            if os.path.exists(meta):
-              j=json.load(open(meta))
-              if etag and j.get('etag')==etag:
-                print('No change: ETag matches')
-                sys.exit(2)
-              if lm and j.get('last_modified')==lm:
-                print('No change: Last-Modified matches')
-                sys.exit(2)
-            print('Changed or no previous metadata, continue')
-            PY
+          python - <<-PY
+          	import os,json,sys
+          	meta=os.environ.get('META_FILE')
+          	etag=os.environ.get('REMOTE_ETAG') or ''
+          	lm=os.environ.get('REMOTE_LASTMOD') or ''
+          	if os.path.exists(meta):
+          	  j=json.load(open(meta))
+          	  if etag and j.get('etag')==etag:
+          	    print('No change: ETag matches')
+          	    sys.exit(2)
+          	  if lm and j.get('last_modified')==lm:
+          	    print('No change: Last-Modified matches')
+          	    sys.exit(2)
+          	print('Changed or no previous metadata, continue')
+          PY
           rc=$?
           if [ "$rc" -eq 2 ]; then
             echo "changed=false" >> "$GITHUB_OUTPUT"
@@ -104,11 +104,11 @@ jobs:
           else
             sha=''
           fi
-            python - <<PY
-            import json, os
-            meta={'url': os.environ.get('INPUT_URL'), 'etag': os.environ.get('REMOTE_ETAG') or None, 'last_modified': os.environ.get('REMOTE_LASTMOD') or None, 'sha256': os.environ.get('sha') or None}
-            json.dump(meta, open(os.environ.get('META_FILE'), 'w'), indent=2)
-            PY
+          python - <<-PY
+          	import json, os
+          	meta={'url': os.environ.get('INPUT_URL'), 'etag': os.environ.get('REMOTE_ETAG') or None, 'last_modified': os.environ.get('REMOTE_LASTMOD') or None, 'sha256': os.environ.get('sha') or None}
+          	json.dump(meta, open(os.environ.get('META_FILE'), 'w'), indent=2)
+          PY
 
       - name: Commit and push changes if any
         run: |
