--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -74,6 +74,43 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }} --legacy-peer-deps
 
+      - name: Setup Python (for data generation)
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Python dependencies (minimal)
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas requests openpyxl
+
+      - name: Ensure analysis result files exist
+        run: |
+          set -euo pipefail
+
+          required_files=(
+            "analyses/faillissementen/results/yearly_by_sector_province.json"
+            "analyses/faillissementen/results/yearly_by_duration_construction.json"
+            "analyses/faillissementen/results/yearly_by_duration_province_construction.json"
+            "analyses/faillissementen/results/yearly_by_workers_construction.json"
+            "analyses/faillissementen/results/yearly_by_workers_province_construction.json"
+          )
+
+          missing=false
+          for f in "${required_files[@]}"; do
+            if [ ! -f "$f" ]; then
+              echo "Missing: $f"
+              missing=true
+            fi
+          done
+
+          if [ "$missing" = "true" ]; then
+            echo "Generating faillissementen results..."
+            python analyses/faillissementen/src/process_faillissementen.py
+          else
+            echo "All required analysis result files already present."
+          fi
+
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
 
