--- a/.github/workflows/update-faillissementen-data.yml
+++ b/.github/workflows/update-faillissementen-data.yml
@@ -58,6 +58,22 @@ jobs:
           set -e
           mkdir -p "$(dirname "$META_FILE")"
 
+          # If expected result files are missing, force a re-run even if remote metadata is unchanged.
+          missing_required=false
+          required_files=(
+            "embuild-analyses/analyses/faillissementen/results/yearly_by_sector_province.json"
+            "embuild-analyses/analyses/faillissementen/results/yearly_by_duration_construction.json"
+            "embuild-analyses/analyses/faillissementen/results/yearly_by_duration_province_construction.json"
+            "embuild-analyses/analyses/faillissementen/results/yearly_by_workers_construction.json"
+            "embuild-analyses/analyses/faillissementen/results/yearly_by_workers_province_construction.json"
+          )
+          for f in "${required_files[@]}"; do
+            if [ ! -f "$f" ]; then
+              echo "Missing required result file: $f"
+              missing_required=true
+            fi
+          done
+
           headers=$(curl -sI "${INPUT_URL}" || true)
           REMOTE_ETAG=$(printf '%s\n' "$headers" | awk -F': ' '/^ETag:/ {print $2}' | tr -d '\r"') || true
           REMOTE_LASTMOD=$(printf '%s\n' "$headers" | awk -F': ' '/^Last-Modified:/ {print substr($0,index($0,$2)) }' | tr -d '\r') || true
@@ -79,9 +95,9 @@ jobs:
           PY
           rc=$?
           set -e
-          if [ "$rc" -eq 2 ]; then
+          if [ "$rc" -eq 2 ] && [ "$missing_required" = "false" ]; then
             echo "changed=false" >> "$GITHUB_OUTPUT"
-            echo "No remote change detected; skipping download and processing."
+            echo "No remote change detected and all required results exist; skipping download and processing."
             exit 0
           elif [ "$rc" -ne 0 ]; then
             exit "$rc"
