--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
-    "cmdk": "^1.1.1"
+    "cmdk": "^1.1.1",
+    "playwright": "^1.44.0"
   }
 }
