--- a/.github/workflows/update-prijsherziening-data.yml
+++ b/.github/workflows/update-prijsherziening-data.yml
@@ -2,8 +2,8 @@ name: Update prijsherziening data
 
 on:
   schedule:
-    # At 00:00 on day-of-month 1 (monthly, when new data is typically available)
-    - cron: '0 0 1 * *'
+    # Monthly on day-of-month 1 (UTC)
+    - cron: '50 0 1 * *'
   workflow_dispatch: {}
 
 permissions:
