--- a/.github/workflows/update-vastgoed-data.yml
+++ b/.github/workflows/update-vastgoed-data.yml
@@ -2,8 +2,8 @@ name: Update vastgoed-verkopen data
 
 on:
   schedule:
-    # At 00:00 on day-of-month 1 (monthly)
-    - cron: '0 0 1 * *'
+    # Monthly on day-of-month 1 (UTC)
+    - cron: '20 0 1 * *'
   workflow_dispatch: {}
 
 permissions:
