--- a/.github/workflows/update-vergunningen-data.yml
+++ b/.github/workflows/update-vergunningen-data.yml
@@ -2,7 +2,7 @@ name: Update vergunningen data
 
 on:
   schedule:
-    # At 00:00 on day-of-month 1
+    # Monthly on day-of-month 1 (UTC)
     - cron: '0 0 1 * *'
   workflow_dispatch: {}
 
