--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ embuild-analyses/analyses/**/results/*.csv
 # Large JSON reference files in results/ (frontend uses chunked files in public/data/)
 embuild-analyses/analyses/gemeentelijke-investeringen/results/bv_municipality_data.json
 embuild-analyses/analyses/gemeentelijke-investeringen/results/rek_municipality_data.json
+
+# Local logs directory
+logs/
