chore: move test files to tests/ and remove tmp/ directory
- Move test_json_write.py and test_sanitize.py to tests/ directory
- Remove temporary analysis files from tmp/ directory (overige_inspect.json, reclassification_sample.json, reclassify_results.json)
- Add tmp/ to .gitignore to prevent future commits of temporary files

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ embuild-analyses/analyses/gemeentelijke-investeringen/results/rek_municipality_d
 
 # Local logs directory
 logs/
+
+# Temporary analysis files
+tmp/
