chore: add Git LFS configuration for large data files
- Track all JSON files in public/data/ with Git LFS
- Track large analysis results (>1MB) with Git LFS
- Track map GeoJSON files with Git LFS
- Free GitHub account provides 1GB storage + 1GB/month bandwidth

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,15 @@
+# Git LFS configuration
+# Track large data files (>500KB) with Git LFS
+
+# Public data files (chunked JSON files)
 embuild-analyses/public/data/**/*.json filter=lfs diff=lfs merge=lfs -text
-embuild-analyses/analyses/**/results/*.json filter=lfs diff=lfs merge=lfs -text
+# Large analysis results (>1MB)
+embuild-analyses/analyses/vastgoed-verkopen/results/quarterly.json filter=lfs diff=lfs merge=lfs -text
+embuild-analyses/analyses/vastgoed-verkopen/results/yearly.json filter=lfs diff=lfs merge=lfs -text
+embuild-analyses/analyses/vastgoed-verkopen/results/municipalities.json filter=lfs diff=lfs merge=lfs -text
+embuild-analyses/analyses/vergunningen-goedkeuringen/results/data_quarterly.json filter=lfs diff=lfs merge=lfs -text
+embuild-analyses/analyses/gemeentelijke-investeringen/results/investments_by_municipality_subdomein.json filter=lfs diff=lfs merge=lfs -text
+embuild-analyses/analyses/huishoudensgroei/results/municipalities_by_size.json filter=lfs diff=lfs merge=lfs -text
+# Map GeoJSON files
 embuild-analyses/public/maps/*.json filter=lfs diff=lfs merge=lfs -text
+embuild-analyses/analyses/**/results/*.json filter=lfs diff=lfs merge=lfs -text
