--- a/.github/workflows/update-energiekaart-premies-data.yml
+++ b/.github/workflows/update-energiekaart-premies-data.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          lfs: true
           fetch-depth: 0
 
       - name: Setup Node.js
